--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "puppeteer": "^2.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0"
+  },
+  "scripts": {
+    "start": "node src/index.js",
+    "test": "jest"
   }
 }
